<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutAdminMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3">

    <Button
        android:id="@+id/button_driver_list_shuttles"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/my_monthly_shuttles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_shuttle_passengers_btn" />

    <Button
        android:id="@+id/button_list_users"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/User_Management"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_list_passengers" />

    <TextView
        android:id="@+id/adminMenuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Admin_Menu"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_list_passengers"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/Passenger_Management"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_list_shuttles" />

    <Button
        android:id="@+id/select_shuttle_passengers_btn"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:text="@string/New_Shuttle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminMenuTextView" />

    <Button
        android:id="@+id/button_list_shuttles"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/monthly_Shuttle_Report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_driver_list_shuttles" />

</androidx.constraintlayout.widget.ConstraintLayout>